--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -77,7 +77,7 @@
 
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="">Home</a></li>
+                                <li><a href="index">Home</a></li>
                                 <li><a href="projects">Projects</a></li>
                                 <li><a href="blog">Blog</a></li>
                                 <li><a href="contact">Contact</a></li>
