--- a/portfolio_web/app/static/button.css
+++ b/portfolio_web/app/static/button.css
@@ -309,3 +309,26 @@ a.article, a.article:hover {
     }
 }
 
+/* ---------------------------------------------------
+    CAROUSEL STYLE
+--------------------------------------------------- */
+
+#myCarousel {
+    margin:auto;
+    height: 150px;
+    width: 300px;
+}
+
+#myCarousel .carousel-img {
+    height: 150px;
+    width: 300px;
+}
+
+/*img.carousel-img {
+    width: 300px;
+    height: 150px
+}
+
+.carousel-inner .item .active {
+    align-content: middle;
+}*/
