--- a/portfolio_web/app/templates/index.html
+++ b/portfolio_web/app/templates/index.html
@@ -12,7 +12,7 @@
                         <a href="https://github.com/tayalde" class="fa fa-github"></a>
                 </div>
         </div>
-        <div class="container">
+        <div class="container-fluid">
                 <h2>About Me</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -20,7 +20,7 @@
 
         <div class="line"></div>
 
-        <div class="container">
+        <div class="container-fluid">
                 <h2>Skills</h2>
                 <div class="skills">
                         <div class="skill">
@@ -92,8 +92,33 @@
         </div>
         <div class="line"></div>
 
-        <div class="container">
+        <div class="container-fluid">
                 <h2>Projects</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#myCarousel" data-slide-to="1"></li>
+                                <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                                <div class="item active">
+                                        <img class="carousel-img" src="{{ url_for('static', filename='images/flask.png') }}" alt="First slide">
+                                </div>
+                                <div class="item">
+                                        <img class="carousel-img" src="{{ url_for('static', filename='images/discord.png') }}" alt="Second slide">
+                                </div>
+                                <div class="item">
+                                        <img class="carousel-img" src="{{ url_for('static', filename='images/flask.png') }}" alt="Third slide">
+                                </div>
+                        </div>
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left"></span>
+                                <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                        </a>
+                </div>
         </div>
 {%- endblock %}
